--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
-<mat-toolbar color="primary" class="app-header">
-  <div><a href="#" target="_blank" class="positronx">SonCaro App</a></div>
-  <span class="nav-tool-items">
-    <a mat-button routerLink="logout" routerLinkActive="active">Logout</a>
-    <a mat-button routerLink="signin" routerLinkActive="active">Signin</a>
-    <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Signup</a>
-  </span>
-</mat-toolbar>
-  
+
+  <app-nav></app-nav>
   <router-outlet></router-outlet>
